--- a/src/pdp/pdp.css
+++ b/src/pdp/pdp.css
@@ -11,6 +11,7 @@
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
 }
+
 .pdp-imagery > img {
     width: 80%;
     margin-right: 1rem;
@@ -51,13 +52,19 @@ h1.product-title {
         width: 66.66%;
         flex-wrap: wrap;
         justify-content: space-between;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
     }
+    .pdp-imagery::-webkit-scrollbar {
+        display: none;
+      }
     .pdp-imagery > img {
         width: calc(50% - 1rem);
         margin-bottom: 1rem;
         animation: pdpDesktopLoadUp 0.75s forwards;
         scroll-snap-align: unset;
     }
+
 }
 
 
